--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Movieflix",
+  "name": "movieflix",
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
@@ -14,7 +14,7 @@
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
     "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
+    "@angular/platform-browser": "^19.2.12",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "rxjs": "~7.8.0",
@@ -25,6 +25,7 @@
     "@angular-devkit/build-angular": "^19.2.13",
     "@angular/cli": "^19.2.13",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/cors": "^2.8.18",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
